# jj

./: AGENTS.md  Cargo.toml  Justfile  plan.md
docs/brainstorms/: 2026-01-31-context-aware-startup-brainstorm.md  2026-01-31-source-ingestion-brainstorm.md  2026-02-01-auto-thread-titling-brainstorm.md  2026-02-01-claude-code-gateway-skill-brainstorm.md
docs/plans/: 2026-01-31-feat-cli-chat-through-gateway-plan.md  2026-01-31-feat-context-aware-chat-startup-plan.md  2026-01-31-feat-deep-think-background-subagent-plan.md  2026-01-31-feat-gateway-daemon-with-cli-and-web-ui-plan.md  2026-01-31-feat-generate-image-tool-plan.md  2026-01-31-feat-source-ingestion-plan.md  2026-02-01-feat-auto-thread-titling-plan.md  2026-02-01-feat-engine-dashboard-and-thread-tracking-plan.md  2026-02-01-feat-gateway-cli-subcommands-and-skill-plan.md  2026-02-01-feat-multi-llm-provider-support-plan.md  2026-02-01-refactor-unify-naming-jj-jay-to-j-plan.md
j_vault/: agents.md  invariants.md
j_vault/audit/: ledger.jsonl
j_vault/config/: j.runtime.yml
j_vault/gateway/: sessions.json
j_vault/prompts/: curator.system.md  j.system.md
jj_vault/: agents.md  invariants.md
jj_vault/audit/: ledger.jsonl
jj_vault/config/: memory.policy.yml
jj_vault/gateway/: sessions.json
jj_vault/index/: knowledge_embeddings.jsonl
jj_vault/prompts/: daily_review.system.md  (+2 more)
scripts/: migrate_thread_headers.sh  smoke_openai.sh  verify.sh
src/: agent.rs  anthropic.rs  audit.rs  chat.rs  embedding_index.rs  embeddings.rs  engine.rs  gemini_chat.rs  git_utils.rs  ingest.rs  knowledge.rs  main.rs  openai.rs  repl.rs  thread_store.rs  vault.rs
web/: index.html
(+264 files in other folders)
