[package]
name = "jay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "14.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ulid = "1.1"
