[package]
name = "jay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
fs2 = "0.4"
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "14.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Gateway dependencies
[dependencies.axum]
version = "0.8"
features = ["ws"]
